k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blackdark
  labels:
    app.kubernetes.io/name: blackdark
