k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackdark-web
  namespace: blackdark
  labels:
    app: blackdark-web
spec:
  type: ClusterIP
  selector:
    app: blackdark-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
